# Tradeval

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
RetailTrader/: .gitignore  pyproject.toml
RetailTrader/config/universes/: us-large-cap-30.yaml
RetailTrader/docs/: architecture.md  data-integrity.md  demo-integrity.md  experiment-lifecycle.md
RetailTrader/docs/plans/: 2026-07-16-agenttrader-first-slice.md  2026-07-16-agenttrader-lab-design.md  2026-07-16-demo-integrity-closure.md  2026-07-16-trading-philosophy-lab.md
RetailTrader/frontend/: package-lock.json  package.json  playwright.config.ts
RetailTrader/frontend/app/: globals.css  layout.tsx  page.tsx
RetailTrader/frontend/components/: AgentDecisionPanel.tsx  ExperimentBuilder.tsx  ExperimentProgress.tsx  InterventionPanel.tsx  PhilosophyDraft.tsx
RetailTrader/frontend/lib/: agenttrader.ts  types.ts
RetailTrader/frontend/tests/: experiment-builder.spec.ts
RetailTrader/src/retailtrader/: __init__.py  cli.py
RetailTrader/src/retailtrader/agent/: adjudication.py  generator.py
RetailTrader/src/retailtrader/data/: sec.py
RetailTrader/src/retailtrader/evaluation/: metrics.py  report.py
RetailTrader/src/retailtrader/simulation/: __init__.py  execution.py  ledger.py  runner.py
RetailTrader/src/retailtrader/storage/: __init__.py  events.py  (+1 more)
RetailTrader/tests/: helpers.py
RetailTrader/tests/e2e/: test_demo.py
RetailTrader/tests/integration/: test_agent_step.py  test_replay_parity.py
RetailTrader/tests/unit/: test_cli.py  test_cli_export.py  test_factors.py
(+145 files in other folders)
