[project]
name = "retailtrader"
version = "0.1.0"
description = "Deterministic trading philosophy lab"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
data-openbb = [
    "openbb>=4.7.2,<5",
    "openbb-yfinance>=1.6.3,<2",
]

[project.scripts]
retailtrader = "retailtrader.cli:app"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retailtrader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: opt-in tests that may access external services"]

[tool.ruff]
line-length = 100
